package com.campusmaster.campusmaster.domain.model.course;

public enum CourseStatus {
    DRAFT,
    PUBLISHED,
    ARCHIVED
}
