package com.campusmaster.campusmaster.domain.model.course;

public enum EnrollmentStatus {
    ACTIVE,
    DROPPED,
    COMPLETED
}
