package com.campusmaster.campusmaster.domain.model.course;

public enum MaterialType {
    DOCUMENT,
    VIDEO,
    LINK
}
