package com.campusmaster.campusmaster.domain.model.user;

public enum Role {
    STUDENT,
    TEACHER,
    ADMIN
}
