@startuml CampusMaster Class Diagram

!define ABSTRACT abstract
!define ENTITY class

' ===== ENUMERATIONS =====
enum Role {
    STUDENT
    TEACHER
    ADMIN
}

enum Semester {
    SEMESTER_1
    SEMESTER_2
}

enum SemesterType {
    SEMESTRE_1
    SEMESTRE_2
}

enum CourseStatus {
    DRAFT
    PUBLISHED
    ARCHIVED
}

enum EnrollmentStatus {
    ACTIVE
    DROPPED
    COMPLETED
}

enum MaterialType {
    DOCUMENT
    VIDEO
    LINK
}

' ===== USER HIERARCHY =====
ABSTRACT User {
    - id: Long
    - firstName: String
    - lastName: String
    - email: String (unique)
    - password: String
    - role: Role
    - enabled: boolean
    - createdAt: LocalDateTime
}

ENTITY Student extends User {
    - dateOfBirth: Date
    - validated: boolean
    - gender: String
    - INE: String (unique)
    - department: Department
}

ENTITY Teacher extends User {
    - department: String
    - courses: List<Course>
}

ENTITY Admin extends User {
    - accessLevel: String (unique)
}

' ===== PEDAGOGY =====
ENTITY Department {
    - id: Long
    - name: String (unique)
    - code: String (unique)
}

ENTITY AcademicSemester {
    - id: Long
    - name: String
    - code: String (unique)
    - startDate: LocalDate
    - endDate: LocalDate
    - isCurrent: Boolean
    - createdAt: LocalDate
    - updatedAt: LocalDate
}

ENTITY Module {
    - id: Long
    - code: String (unique)
    - title: String
    - description: String
    - semester: Semester
    - department: Department
    - teachers: List<Teacher>
}

' ===== COURSES & RESOURCES =====
ENTITY Course {
    - id: Long
    - title: String
    - description: String
    - status: CourseStatus
    - module: Module
    - teacher: Teacher
    - materials: List<Material>
    - enrollments: List<Enrollment>
    - assignments: List<Assignment>
}

ENTITY Material {
    - id: Long
    - title: String
    - type: MaterialType
    - url: String
    - description: String
    - uploadedAt: LocalDateTime
    - updatedAt: LocalDateTime
    - course: Course
}

' ===== ASSIGNMENTS & SUBMISSIONS =====
ENTITY Assignment {
    - id: Long
    - title: String
    - description: String
    - instruction: String
    - deadline: LocalDateTime
    - published: boolean
    - course: Course
    - submissions: List<Submission>
}

ENTITY Submission {
    - id: Long
    - filename: String
    - filepath: String
    - filetype: String
    - submittedAt: LocalDateTime
    - grade: Double
    - feedback: String
    - assignment: Assignment
    - student: Student
}

' ===== ENROLLMENT =====
ENTITY Enrollment {
    - id: Long
    - student: Student
    - course: Course
    - status: EnrollmentStatus
    - enrolledAt: LocalDateTime
}

' ===== RELATIONSHIPS =====

' Student relationships
Student "1" --> "1" Department
Department "1" o-- "*" Student

' AcademicSemester
AcademicSemester "1" --> "*" Module

' Teacher with Module
Teacher "1..*" --> "*" Module
Module "*" --> "1..*" Teacher

' Module with Course
Module "1" --> "*" Course
Course "*" --> "1" Module

' Teacher with Course
Teacher "1" --> "*" Course
Course "*" --> "1" Teacher

' Course with Material
Course "1" --> "*" Material
Material "*" --> "1" Course

' Course with Assignment
Course "1" --> "*" Assignment
Assignment "*" --> "1" Course

' Course with Enrollment
Course "1" --> "*" Enrollment
Enrollment "*" --> "1" Course

' Student with Enrollment
Student "1" --> "*" Enrollment
Enrollment "*" --> "1" Student

' Student with Submission
Student "1" --> "*" Submission
Submission "*" --> "1" Student

' Assignment with Submission
Assignment "1" --> "*" Submission
Submission "*" --> "1" Assignment

' Role associations
User "1" --> "1" Role

' Status associations
Course "1" --> "1" CourseStatus
Enrollment "1" --> "1" EnrollmentStatus
Material "1" --> "1" MaterialType

@enduml
